--- a/views/desktop.jade
+++ b/views/desktop.jade
@@ -1,7 +1,7 @@
 // Create any number of elements with class slide within the container
 section.slide
 	h1 robodeck
-	h2 Interactive Demo - Connecting and GeoLocation
+	h2 Connecting and GeoLocation 
 	ol 
 		li Connect to http://robodeck.herokuapp.com
 		li Your Browser will detect Web Socket Support
@@ -11,7 +11,7 @@ section.slide
 
 section.slide#remote
 	h1 HTML5 Rocks
-	h2 Interactive Demo - Remote Control Pub/Sub
+	h2 Remote Control Pub/Sub
 	ol 
 		li We connect to the same application with a Sencha 2.O HTML5 Mobile Web app
 		li We advance the deck by publishing NEXT or PREV command messages to the server
